# ladot-data-engineering-airflow-spark-snowflake

./: .env.example  .gitignore  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
analytics-engineering/: README.md  main.py  pyproject.toml
analytics-engineering/ladot_transformations/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
analytics-engineering/ladot_transformations/models/marts/: dim_agency.sql  dim_date.sql  dim_location.sql  dim_meter.sql  dim_time_of_day.sql  dim_vehicle.sql  dim_violation.sql  fact_citation.sql  fact_occupancy.sql
analytics-engineering/ladot_transformations/models/staging/: raw_meter_occupancy.sql  raw_parking_citations.sql  raw_parking_inventory_policies.sql  sources.yml
batch-processing/: .env.example  README.md  clean_datasets_job.py  main.py  pyproject.toml
orchestration/: .env.example  README.md  docker-compose.yml  requirements.txt
orchestration/dags/: ladot_parking_ingestion_daily.py  ladot_parking_ingestion_daily_sql.py  ladot_parking_meter_ingestion_daily.py
pipeline/: .env.example  Dockerfile  README.md  pipeline-sodapy.py  pipeline-test.py  pipeline.py  pyproject.toml
terraform/: README.md  main.tf  terraform.tfvars  variables.tf
